--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     </div>
     <!-- PREVIEW LOGIN END -->
 
+    <div class="announcement-bar">
+        🎉 Spare 10% auf alles mit Code: <strong>CANDYOCEAN2026</strong>
+    </div>
+
     <header>
         <div class="header-container">
             <a href="#" class="logo" onclick="app.navigate('home')"><img src="co_logo.jpeg" alt=""></a>
@@ -33,6 +37,12 @@
                     <option value="AT">🇦🇹 AT</option>
                     <option value="CH">🇨🇭 CH</option>
                 </select>
+
+                <div class="cart-icon" onclick="app.navigate('cart')">
+                    <!-- SVG Cart Icon -->
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
+                    <span id="cart-count" class="cart-count" style="display:none">0</span>
+                </div>
 
                 <button class="hamburger" onclick="app.toggleMenu()" aria-label="Menü">
                     <span></span>
@@ -45,13 +55,6 @@
                         <li><a onclick="app.navigate('home')" id="nav-home">Startseite</a></li>
                         <li><a onclick="app.navigate('shop')" id="nav-shop">Produkte</a></li>
                         <li><a onclick="app.navigate('contact')" id="nav-contact" style="display: none;">Kontakt</a></li>
-                        <li>
-                            <div class="cart-icon" onclick="app.navigate('cart')">
-                                <!-- SVG Cart Icon -->
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
-                                <span id="cart-count" class="cart-count" style="display:none">0</span>
-                            </div>
-                        </li>
                     </ul>
                 </nav>
             </div>
