--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Candyocean</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="mobile.css">
@@ -12,7 +12,7 @@
 <body>
 
     <!-- PREVIEW LOGIN START (Diesen Block löschen, um den Login zu entfernen) -->
-    <div id="preview-login" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: var(--bg-color); z-index: 10000; display: flex; flex-direction: column; justify-content: center; align-items: center; padding: 1rem; box-sizing: border-box;">
+    <div id="preview-login" style="position: fixed; top: 0; left: 0; width: 100vw; height: 100%; background: var(--bg-color); z-index: 10000; display: flex; flex-direction: column; justify-content: center; align-items: center; padding: 1rem; box-sizing: border-box;">
         <div style="background: white; padding: 2rem; border-radius: 16px; box-shadow: var(--shadow); max-width: 400px; width: 100%; text-align: center; box-sizing: border-box;">
             <h2 style="margin-top: 0; color: var(--primary-color);">Preview Zugang 🔒</h2>
             <p style="margin-bottom: 1.5rem; color: var(--text-color);">Bitte Passwort eingeben</p>
