--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- PREVIEW LOGIN END -->
 
     <div class="announcement-bar">
-        🎉 Spare 10% auf alles mit Code: <strong>CANDYOCEAN2026</strong>
+        🎉 Spare 10% auf alles mit: <strong>CANDYOCEAN2026</strong>
     </div>
 
     <header>
