--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <!-- PREVIEW LOGIN END -->
 
-    <div class="announcement-bar">
+    <div class="announcement-bar" style="display: none;">
         🎉 Spare 10% auf alles mit: <strong>CANDYOCEAN2026</strong>
     </div>
 
@@ -61,6 +61,7 @@
         </div>
     </header>
 
+    <div class="content-wrapper">
     <main>
         <!-- Home Section -->
         <section id="home" class="section active">
@@ -348,6 +349,7 @@
             <a href="#" onclick="alert('Datenschutz Placeholder')">Datenschutz</a>
         </p>
     </footer>
+    </div>
     <script src="products.js"></script>
     <script src="taxes.js"></script>
     <!-- jsPDF Library für Rechnungsdruck -->
